--- a/src/event_form/components/organizer-contact/organizer-contact.html
+++ b/src/event_form/components/organizer-contact/organizer-contact.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <p><strong>Contact</strong></p>
+        <p><strong translate-once="organizer.contact.title"></strong></p>
     </div>
 </div>
 
@@ -23,9 +23,9 @@
     <div class="panel-body">
       <form name="occ.organizerContactWrapper">
         <div ng-switch="occ.newContact.type">
-          <label ng-switch-when="url">Geef een URL in</label>
-          <label ng-switch-when="email">Geef een e-mailadres in</label>
-          <label ng-switch-when="phone">Geef een telefoonnummer in<small class="text-muted">, bv. 011 32 43 54</small></label>
+          <label ng-switch-when="url"><span translate-once="organizer.contact.enter_url"></span></label>
+          <label ng-switch-when="email"><span translate-once="organizer.contact.enter_email"></span></label>
+          <label ng-switch-when="phone"><span translate-once="organizer.contact.enter_phone"></span></label>
         </div>
         <div ng-switch="occ.newContact.type">
           <div ng-switch-when="url" class="form-group" ng-class="{ 'has-error': urlContactForm.url.$touched && urlContactForm.url.$invalid }">
@@ -33,10 +33,10 @@
                   <input type="text" name="url" udb-http-prefix class="form-control" ng-model="occ.newContact.value" ng-pattern="/^(http\:\/\/|https\:\/\/)?([a-z0-9][a-z0-9\-]*\.)+[a-z0-9][a-z0-9\-]*$/" ng-model-options="{allowInvalid:true}" required>
                   <div class="help-block" ng-messages="urlContactForm.url.$error" ng-show="!occ.isPristine && urlContactForm.url.$error">
                       <p ng-message="required">
-                          Gelieve dit veld niet leeg te laten.
+                          <span translate-once="organizer.contact.required"></span>
                       </p>
                       <p ng-message="pattern">
-                          Gelieve een geldige url in te vullen.
+                          <span translate-once="organizer.contact.valid_url"></span>
                       </p>
                   </div>
               </ng-form>
@@ -46,10 +46,10 @@
                   <input type="text" name="email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" class="form-control" ng-model="occ.newContact.value" ng-model-options="{allowInvalid:true}" required>
                   <div class="help-block" ng-messages="mailContactForm.email.$error" ng-show="!occ.isPristine && mailContactForm.email.$error">
                       <p ng-message="required">
-                          Gelieve dit veld niet leeg te laten.
+                          <span translate-once="organizer.contact.required"></span>
                       </p>
                       <p ng-message="pattern">
-                          Gelieve een geldig e-mailadres in te vullen.
+                          <span translate-once="organizer.contact.valid_email"></span>
                       </p>
                   </div>
               </ng-form>
@@ -59,21 +59,20 @@
                   <input type="tel" name="phone" class="form-control" ng-model="occ.newContact.value" ng-pattern="/^[^a-zA-Z]*$/" ng-model-options="{allowInvalid:true}" required>
                   <div class="help-block" ng-messages="phoneContactForm.phone.$error" ng-show="!occ.isPristine && phoneContactForm.phone.$error">
                       <p ng-message="required">
-                          Gelieve dit veld niet leeg te laten.
+                          <span translate-once="organizer.contact.required"></span>
                       </p>
                       <p ng-message="pattern">
-                          Gelieve een geldig telefoonnummer in te vullen.</p>
+                          <span translate-once="organizer.contact.valid_phone"></span>
+                      </p>
                   </div>
               </ng-form>
           </div>
         </div>
 
-        <button type="button" ng-click="occ.cancelOrganizerContactEntry()" class="btn btn-link">
-            Annuleren
+        <button type="button" ng-click="occ.cancelOrganizerContactEntry()" class="btn btn-link" translate-once="organizer.contact.cancel">
         </button>
 
-        <button type="button" ng-click="occ.addOrganizerContactInfo()" class="btn btn-default" ng-disabled="occ.isPristine">
-            Toevoegen
+        <button type="button" ng-click="occ.addOrganizerContactInfo()" class="btn btn-default" ng-disabled="occ.isPristine" translate-once="organizer.contact.add">
         </button>
 
       </form>
@@ -84,9 +83,9 @@
 <div class="row" ng-hide="occ.addingContactEntry">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <ul class="list-unstyled">
-            <li><a ng-click="occ.addOrganizerContactEntry('phone')" href="#">Telefoonnummer toevoegen</a></li>
-            <li><a ng-click="occ.addOrganizerContactEntry('email')" href="#">E-mailadres toevoegen</a></li>
-            <li><a ng-click="occ.addOrganizerContactEntry('url')" href="#">Andere website toevoegen</a></li>
+            <li><a ng-click="occ.addOrganizerContactEntry('phone')" href="#" translate-once="organizer.contact.add_phone"></a></li>
+            <li><a ng-click="occ.addOrganizerContactEntry('email')" href="#" translate-once="organizer.contact.add_email"></a></li>
+            <li><a ng-click="occ.addOrganizerContactEntry('url')" href="#" translate-once="organizer.contact.add_url"></a></li>
         </ul>
     </div>
 </div>
