--- a/src/event_form/components/image-edit/event-form-image-edit.html
+++ b/src/event_form/components/image-edit/event-form-image-edit.html
@@ -3,42 +3,39 @@
     <button type="button" class="close" ng-click="cancel()">
       <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
     </button>
-    <h4 class="modal-title">Afbeelding info bewerken</h4>
+    <h4 class="modal-title" translate-once="images.edit.title"></h4>
   </div>
   <div class="modal-body">
 
     <div>
       <div class="form-group">
-        <label>Beschrijving <strong class="text-danger">*</strong></label>
+        <label><span translate-once="images.description"></span> <strong class="text-danger">*</strong></label>
         <input type="text" class="form-control" ng-model="description" required>
-        <p class="help-block">
-          Een goede beschrijving van je afbeelding wordt gelezen door zoekmachines en gebruikers met een visuele beperking.
-        </p>
+        <p class="help-block" translate-once="images.edit.description_help"></p>
       </div>
 
       <div class="form-group">
-        <label>Copyright <strong class="text-danger">*</strong></label>
+        <label><span translate-once="images.copyright"></span> <strong class="text-danger">*</strong></label>
         <input type="text" class="form-control" ng-model="copyrightHolder" required>
-        <p class="help-block">
-          Vermeld de naam van de rechtenhoudende fotograaf (minimum 3 karakters).</p>
+        <p class="help-block" translate-once="images.copyright_help"></p>
       </div>
     </div>
 
-    <div ng-show="error" class="alert alert-danger">Er ging iets mis bij het opslaan van de afbeelding.</div>
+    <div ng-show="error" class="alert alert-danger">
+      <span translate-once="images.edit.save_error"></span>
+    </div>
 
     <p class="image-copyright-agreements">
-      Je staat op het punt (een) afbeelding(en) toe te voegen en openbaar te verspreiden.
-      Je dient daartoe alle geldende auteurs- en portretrechten te respecteren, alsook alle andere toepasselijke
-      wetgeving. Je kan daarvoor aansprakelijk worden gehouden, zoals vastgelegd in de
-      <a ng-href="{{::uploadTermsConditionsUrl}}" target="_blank">algemene voorwaarden</a>.
-      <a ng-href="{{::uploadCopyRightInfoUrl}}" target="_blank">Meer informatie over copyright</a>
+      <span translate-once="images.agreement"></span>
+      <a ng-href="{{::uploadTermsConditionsUrl}}" target="_blank" translate-once="images.conditions"></a>.
+      <a ng-href="{{::uploadCopyRightInfoUrl}}" target="_blank" translate-once="images.copyright_info"></a>
     </p>
   </div>
   <div class="modal-footer">
 
-    <button type="button" class="btn btn-default" ng-click="cancel()">Annuleren</button>
+    <button type="button" class="btn btn-default" ng-click="cancel()" translate-once="images.cancel"></button>
     <button type="button" class="btn btn-primary" ng-click="updateImageInfo()" ng-disabled="!allFieldsValid() || saving">
-      Bijwerken <i ng-show="saving" class="fa fa-circle-o-notch fa-spin"></i>
+      <span translate-once="images.edit.update"></span> <i ng-show="saving" class="fa fa-circle-o-notch fa-spin"></i>
     </button>
 
   </div>
