--- a/src/core/components/workflow-status/udb.workflow-status.directive.html
+++ b/src/core/components/workflow-status/udb.workflow-status.directive.html
@@ -1,13 +1,16 @@
 <tr>
     <td><span class="row-label" translate-once="workflowStatus.label"></span></td>
-    <td>
+    <td ng-if="cm.event.workflowStatus !== 'REJECTED'">
         <span ng-if="cm.event.available" ng-bind="cm.event.available | date: 'dd/MM/yyyy'">
                     </span>
         <span ng-if="!cm.event.available && !cm.event.availableFrom">{{::cm.status | translate }}</span>
         <span ng-if="!cm.event.available && cm.event.availableFrom">Online vanaf {{cm.event.availableFrom | date: 'dd/MM/yyyy'}}</span>
     </td>
+    <td ng-if="cm.event.workflowStatus === 'REJECTED'">
+      <p><span translate-once="workflowStatus.rejected_full"></span>&nbsp;<a ng-href="{{::cm.publicationRulesLink}}" target="_blank"><span translate-once="workflowStatus.rules"></span></a></p>
+    </td>
 </tr>
-<tr>
+<tr ng-if="cm.event.workflowStatus !== 'REJECTED'">
     <td><span class="row-label" translate-once="workflowStatus.id"></span></td>
     <td>
         <ul>
