III-2479 change 'Afgelopen evenementen' in 'Afgelopen evenement'

--- a/src/dashboard/components/dashboard-item.directive.html
+++ b/src/dashboard/components/dashboard-item.directive.html
@@ -33,7 +33,7 @@
   </span>
   <span ng-if="::offerCtrl.offerExpired">
     <div class="pull-right">
-      <span class="text-muted" translate-once="dashboard.directive.expired_events"></span>
+      <span class="text-muted" translate-once="dashboard.directive.expired_event"></span>
     </div>
   </span>
 </td>
