--- a/src/event_form/components/price-info/priceInfo.html
+++ b/src/event_form/components/price-info/priceInfo.html
@@ -30,7 +30,7 @@
           </thead>
           <tr ng-repeat="(key, priceInfo) in $ctrl.price"
               ng-model="priceInfo">
-            <td>{{priceInfo.name}}</td>
+            <td>{{priceInfo.name[$ctrl.mainLanguage]}}</td>
             <td>
               <span ng-if="priceInfo.price == 0" translate-once="eventForm.step5.priceInfo.free">
                 Gratis
