--- a/src/event_form/components/price-form-modal/price-form-modal.html
+++ b/src/event_form/components/price-form-modal/price-form-modal.html
@@ -22,7 +22,7 @@
                                    class="form-control"
                                    name="name"
                                    placeholder="{{::'prices.target_group' | translate }}"
-                                   ng-model="priceInfo.name[pfmc.mainLanguage]"
+                                   ng-model="priceInfo.name"
                                    ng-class="{ 'has-error': pfmc.priceForm.priceFieldForm.name.$invalid }"
                                    required />
                         </span>
