--- a/src/event_form/components/age/form-age.html
+++ b/src/event_form/components/age/form-age.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-sm-9">
             <span ng-repeat="(type, ageRange) in ::fagec.ageRanges">
-                <a ng-bind="::ageRange.label"
+                <a ng-bind="::translateAgeRange(ageRange.label)"
                    ng-class="{'font-bold': fagec.activeAgeRange === type}"
                    href="#"
                    ng-click="fagec.setAgeRangeByType(type)"></a><span ng-if="::!$last">, </span>
