--- a/src/event_form/components/age/form-age.html
+++ b/src/event_form/components/age/form-age.html
@@ -22,6 +22,7 @@
                            ng-blur="fagec.instantSaveAgeRange()"
                            ng-change="fagec.delayedSaveAgeRange()"
                            udb-age-input>
+                    <span class="form-text">jaar</span>
                 </div>
                 <div class="form-group">
                     <label for="max-age">tot</label>
@@ -33,6 +34,7 @@
                            ng-blur="fagec.instantSaveAgeRange()"
                            ng-change="fagec.delayedSaveAgeRange()"
                            udb-age-input>
+                    <span class="form-text">jaar</span>
                 </div>
                </form>
             </div>
