--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -46,3 +46,12 @@ input + .alert {
 .font-bold {
   font-weight: bold;
 }
+
+.badge-remove {
+  cursor: pointer;
+  color: #FFF;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
