III-2632 fix typo in translate-once

--- a/src/search/components/label-select.html
+++ b/src/search/components/label-select.html
@@ -17,7 +17,7 @@
 </form>
 
 <div class="alert alert-warning" ng-show="!form.input.$valid && !form.input.$error.minlength ">
-  <p><span tranlate-once="labels.invalid"></span><br>
+  <p><span translate-once="labels.invalid"></span><br>
     <ul>
       <li translate-once="labels.chars"></li>
       <li translate-once="labels.excluded"></li>
