--- a/src/styles/event-translator.less
+++ b/src/styles/event-translator.less
@@ -11,3 +11,9 @@
 .translate-section {
   margin: 30px 0;
 }
+
+.offer-translate .uploaded-image {
+  margin-bottom: 1em;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 1em;
+}
