--- a/src/styles/export-modal.less
+++ b/src/styles/export-modal.less
@@ -1,16 +1,5 @@
-@export-format-radio-width: 50px;
-
 .export-format-field label {
   cursor: pointer;
-}
-
-.export-format-label {
-  font-weight: bold;
-  margin-left: (@export-format-radio-width - 16);
-}
-
-.export-format-description {
-  margin-left: @export-format-radio-width;
 }
 
 .export-format-field {
@@ -32,7 +21,7 @@
   margin-right: 1em;
 }
 
-.export-customization-brand img {
-  border: 1px solid silver;
-  padding: 5px;
+.export-logo {
+  min-width: 150px;
+  background-color: white;
 }
