--- a/src/styles/event-translator.less
+++ b/src/styles/event-translator.less
@@ -9,11 +9,32 @@
 }
 
 .translate-section {
-  margin: 30px 0;
+  margin: 15px 0;
 }
 
-.offer-translate .uploaded-image {
+.offer-translate .media-object {
   margin-bottom: 1em;
   border-bottom: 1px solid #ccc;
   padding-bottom: 1em;
+}
+
+.offer-translate .uploaded-image {
+  margin-bottom: 7.5px;
+}
+
+.offer-translate .page-header {
+  margin: 0;
+  border-bottom: 1px solid #ccc;
+  
+  h1 {
+    font-size: 24px;
+    font-weight: 300;
+    margin-top: 12px;
+    margin-bottom: 6px;
+  }
+}
+
+.offer-translate-chooser {
+  text-align: right;
+  margin-top: 18px;
 }
