--- a/src/offer_translate/components/description/translate-description.html
+++ b/src/offer_translate/components/description/translate-description.html
@@ -6,16 +6,16 @@
         <div class="col-sm-9">
             <div class="row">
                 <div class="col-sm-3">
-                    <p class="orginal text-muted" translate-once="translate.original"></p>
+                    <p class="text-muted" translate-once="translate.original"></p>
                 </div>
                 <div class="col-sm-9">
-                    <p class="orginal text-muted" ng-bind="ttd.originalDescription"></p>
+                    <p class="text-muted" ng-bind="ttd.originalDescription"></p>
                 </div>
             </div>
 
             <div class="row" ng-repeat="(code, language) in ttd.activeLanguages" ng-show="language.active && !language.main">
                 <div class="col-sm-3">
-                    <p class="orginal text-muted">{{code}}</p>
+                    <p class="text-muted"><span translate-once="translate.translation"></span> {{code}}</p>
                 </div>
                 <div class="col-sm-9">
                     <input type="text" ng-blur="ttd.saveTranslatedDescription(code)" class="form-control form-group" ng-model="ttd.translatedDescriptions[code]">
