--- a/src/offer_translate/components/images/translate-images.html
+++ b/src/offer_translate/components/images/translate-images.html
@@ -6,34 +6,38 @@
         <div class="col-sm-9">
             <div class="row">
                 <div class="col-sm-3">
-                    <p class="orginal text-muted">Origineel</p>
+                    <p class="text-muted">Origineel</p>
                 </div>
                 <div class="col-sm-9">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <div ng-repeat="image in tic.eventFormData.mediaObjects | filter:{'@type': 'schema:ImageObject', 'inLanguage': tic.offer.mainLanguage} track by image.contentUrl">
-                                <div class="uploaded-image">
+                            <div ng-repeat="image in tic.eventFormData.mediaObjects | filter:{'@type': 'schema:ImageObject', 'inLanguage': tic.offer.mainLanguage} track by image.contentUrl" class="media-object">
+                                <div class="uploaded-image media">
 
-
+                                  <div class="media-left">
                                     <img ng-src="{{ image.thumbnailUrl }}?width=50&height=50" style="width: 50px;">
+                                  </div>
 
-
-
+                                  <div class="media-body">
                                     <div ng-bind="image.description"></div>
                                     <div class="text-muted">&copy; <span ng-bind="image.copyrightHolder"><span translate-once="eventForm.step5.copyright"></span></span></div>
-
-                                    <!-- Single button -->
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Dupliceer <span class="caret"></span>
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            <li ng-repeat="(code, language) in tic.activeLanguages" ng-if="language.active"><a ng-click="tic.translateImage(image, code)">{{code}}</a></li>
-                                        </ul>
-                                    </div>
+                                  </div>
 
                                 </div>
+                              
+                              <!-- Single button -->
+                              <div class="btn-group">
+                                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                      Kopieren in een andere taal <span class="caret"></span>
+                                  </button>
+                                  <ul class="dropdown-menu">
+                                      <li ng-repeat="(code, language) in tic.activeLanguages" ng-if="language.active && !language.main"><button ng-click="tic.copyImage(image, code)" class="btn-link">{{code}}</button></li>
+                                  </ul>
+                              </div>
+                              
                             </div>
+
+
                         </div>
                     </div>
                 </div>
@@ -41,12 +45,12 @@
 
             <div class="row" ng-repeat="(code, language) in tic.activeLanguages" ng-show="language.active && !language.main">
                 <div class="col-sm-3">
-                    <p class="orginal text-muted">{{code}}</p>
+                    <p class="text-muted"><span translate-once="translate.translation"></span> {{code}}</p>
                 </div>
                 <div class="col-sm-9">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <div ng-repeat="image in tic.eventFormData.mediaObjects | filter:{'@type': 'schema:ImageObject', 'inLanguage': code} track by image.contentUrl">
+                            <div ng-repeat="image in tic.eventFormData.mediaObjects | filter:{'@type': 'schema:ImageObject', 'inLanguage': code} track by image.contentUrl" class="media-object">
                                 <div class="uploaded-image">
                                     <div class="media" ng-class="{'main-image': ($index === 0)}">
                                         <a class="media-left" href="#">
