--- a/src/event_form/components/organizer/event-form-organizer-modal.html
+++ b/src/event_form/components/organizer/event-form-organizer-modal.html
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="col-sm-12 col-md-8">
           <div class="form-group" ng-class="{'has-error' : showValidation && organizerForm.name.$error.required }">
-            <label>Naam</label>
+            <label translate-once="organizer.modal.label_name"></label>
             <input type="text"
                    name="name"
                    class="form-control"
