--- a/src/event_form/components/publish-modal/event-form-publish-modal.html
+++ b/src/event_form/components/publish-modal/event-form-publish-modal.html
@@ -1,8 +1,8 @@
 <div class="modal-header">
-  <h4 class="modal-title">Kies een publicatiedatum</h4>
+  <h4 class="modal-title" translate-once="eventForm.embargo.title"></h4>
 </div>
 <div id="event-form-publish-modal" class="modal-body">
-  <p>Vanaf wanneer mag dit online verschijnen? <em class="text-info"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Opgelet, deze datum kan je maar één keer instellen.</em></p>
+  <p translate-once="eventForm.embargo.help"></p>
     <div ng-if="!efpmc.eventFormData.availableFrom" class="form-inline">
       <div class="input-group">
       <input
@@ -24,14 +24,12 @@
       </div>
     </div>
     <br>
-    <div class="alert alert-warning" ng-if="efpmc.error==='past'">Een publicatiedatum kan niet in het verleden liggen.</div>
-    <div class="alert alert-warning" ng-if="efpmc.error==='empty'">Kies een publicatiedatum.</div>
+    <div class="alert alert-warning" ng-if="efpmc.error==='past'" translate-once="eventForm.embargo.error_past"></div>
+    <div class="alert alert-warning" ng-if="efpmc.error==='empty'" translate-once="eventForm.embargo.error_empty"></div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" ng-click="efpmc.dismiss();" data-dismiss="modal">
-    Annuleren
+  <button type="button" class="btn btn-default" ng-click="efpmc.dismiss();" data-dismiss="modal" translate-once="eventForm.embargo.cancel">
   </button>
-  <button type="button" class="btn btn-primary" ng-click="efpmc.savePublicationDate()">
-    Klaar met bewerken
+  <button type="button" class="btn btn-primary" ng-click="efpmc.savePublicationDate()" translate-once="eventForm.embargo.ready">
   </button>
 </div>
