III-2683 use ng-mousedown instead of ng-click on age range links

--- a/src/event_form/components/age/form-age.html
+++ b/src/event_form/components/age/form-age.html
@@ -8,7 +8,7 @@
                 <a ng-bind="::translateAgeRange(ageRange.label)"
                    ng-class="{'font-bold': fagec.activeAgeRange === type}"
                    href="#"
-                   ng-click="fagec.setAgeRangeByType(type)"></a><span ng-if="::!$last">, </span>
+                   ng-mousedown="fagec.setAgeRangeByType(type)"></a><span ng-if="::!$last">, </span>
             </span>
             <div ng-show="fagec.rangeInputEnabled" class="form-inline" id="form-age">
                <form name="ageForm">
