--- a/src/event_form/components/place/event-form-place-modal.html
+++ b/src/event_form/components/place/event-form-place-modal.html
@@ -26,8 +26,7 @@
         <div class="form-group">
             <label translate-once="location.city"></label>
             <p class="form-control-static" id="waar-locatie-toevoegen-gemeente">
-                <span ng-bind="newPlace.address.postalCode"></span>
-                <span ng-bind="newPlace.address.addressLocality"></span> 
+                <span ng-bind="newPlace.address.postalCode"></span> <span ng-bind="newPlace.address.addressLocality"></span><br>
                 <span ng-bind="newPlace.address.addressCountry"></span>
             </p>
         </div>
