--- a/src/event_form/components/place/event-form-place-modal.html
+++ b/src/event_form/components/place/event-form-place-modal.html
@@ -26,8 +26,8 @@
         <div class="form-group">
             <label translate-once="location.city"></label>
             <p class="form-control-static" id="waar-locatie-toevoegen-gemeente">
-                <span ng-bind="newPlace.address.postalCode"></span> <span ng-bind="newPlace.address.addressLocality"></span><br>
-                <span ng-bind="newPlace.address.addressCountry"></span>
+                <span ng-bind="newPlace.address.postalCode"></span> <span ng-bind="newPlace.address.addressLocality"></span>
+                <span class="text-muted">(<span ng-bind="newPlace.address.addressCountry"></span>)</span>
             </p>
         </div>
         <div class="form-group" ng-class="{'has-error' : showValidation && placeForm.eventType.$error.required }">
