--- a/src/core/components/workflow-status/udb.workflow-status.directive.html
+++ b/src/core/components/workflow-status/udb.workflow-status.directive.html
@@ -17,8 +17,8 @@
             <li>
                 <span ng-bind="cm.event.id"></span>
             </li>
-            <li>
-                <a ng-href="{{cm.getPublicUrl(cm.event.id)}}" translate-once="preview.publiq_url"></a>
+            <li ng-if="cm.getPublicUrl(cm.event.id)">
+                <a ng-href="{{cm.getPublicUrl(cm.event.id)}}" translate-once="preview.publiq_url" translate-values="{ publicationBrand: '{{::cm.publicationBrand}}' }"></a>
             </li>
             <li ng-repeat="sameAs in cm.sameAsRelations(cm.event)"><span ng-bind="sameAs"></span></li>
         </ul>
